// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBorderedBox renders correctly 1`] = `
<DocumentFragment>
  .cache-1dm7ubo-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
}

.cache-160wxok-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
  margin-bottom: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n0re8b-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n0re8b-StyledIcon .e1duuirp3 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-1dm7ubo-BorderedBox-StyledBorderedBox e13z6rra3"
  >
    <div
      class="cache-160wxok-StyledRadioContainer e13z6rra2"
    >
      <label
        aria-disabled="false"
        class="e1duuirp0 e1g1zfwd0 cache-r43if8-StyledText-variantStyles-StyledRadioContainer"
        for="radio-choice"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1ihnbva-StyledRadio e1duuirp1"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
        <svg
          class="cache-n0re8b-StyledIcon e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing e1duuirp3"
              cx="12"
              cy="12"
              r="6"
            />
          </g>
        </svg>
        Choice
      </label>
    </div>
    <div
      class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
    >
      Choice description
    </div>
  </div>
  .cache-18bdq20-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-18bdq20-StyledExpandable-StyledExpandable"
  >
    <div
      class="cache-1hzw3uf-StyledError e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly and triggers change on borderedbox click 1`] = `
<DocumentFragment>
  .cache-1dm7ubo-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
}

.cache-160wxok-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
  margin-bottom: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n0re8b-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n0re8b-StyledIcon .e1duuirp3 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-1dm7ubo-BorderedBox-StyledBorderedBox e13z6rra3"
  >
    <div
      class="cache-160wxok-StyledRadioContainer e13z6rra2"
    >
      <label
        aria-disabled="false"
        class="e1duuirp0 e1g1zfwd0 cache-r43if8-StyledText-variantStyles-StyledRadioContainer"
        for="radioborderedbox-choice1"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          aria-invalid="false"
          class="cache-1ihnbva-StyledRadio e1duuirp1"
          id="radioborderedbox-choice1"
          name="radioborderedbox"
          tabindex="0"
          type="radio"
          value="choice1"
        />
        <svg
          class="cache-n0re8b-StyledIcon e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing e1duuirp3"
              cx="12"
              cy="12"
              r="6"
            />
          </g>
        </svg>
        Choice 1
      </label>
    </div>
    <div
      class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
    >
      Choice 1 description
    </div>
  </div>
  .cache-18bdq20-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-18bdq20-StyledExpandable-StyledExpandable"
  >
    <div
      class="cache-1hzw3uf-StyledError e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-1o75o4c-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  border: 1px solid #4f0599!important;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-160wxok-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
  margin-bottom: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n0re8b-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n0re8b-StyledIcon .e1duuirp3 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-1o75o4c-BorderedBox-StyledBorderedBox e13z6rra3"
  >
    <div
      class="cache-160wxok-StyledRadioContainer e13z6rra2"
    >
      <label
        aria-disabled="false"
        class="e1duuirp0 e1g1zfwd0 cache-r43if8-StyledText-variantStyles-StyledRadioContainer"
        for="radio-choice"
      >
        <input
          aria-checked="true"
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="cache-1ihnbva-StyledRadio e1duuirp1"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
        <svg
          class="cache-n0re8b-StyledIcon e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing e1duuirp3"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        Choice
      </label>
    </div>
    <div
      class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
    >
      Choice description
    </div>
  </div>
  .cache-18bdq20-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-18bdq20-StyledExpandable-StyledExpandable"
  >
    <div
      class="cache-1hzw3uf-StyledError e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-mro85z-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  cursor: not-allowed!important;
  color: #c4c9d6;
}

.cache-160wxok-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
  margin-bottom: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n0re8b-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n0re8b-StyledIcon .e1duuirp3 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-mro85z-BorderedBox-StyledBorderedBox e13z6rra3"
    disabled=""
  >
    <div
      class="cache-160wxok-StyledRadioContainer e13z6rra2"
    >
      <label
        aria-disabled="true"
        class="e1duuirp0 e1g1zfwd0 cache-r43if8-StyledText-variantStyles-StyledRadioContainer"
        for="radio-choice"
      >
        <input
          aria-checked="false"
          aria-disabled="true"
          aria-invalid="false"
          class="cache-1ihnbva-StyledRadio e1duuirp1"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
        <svg
          class="cache-n0re8b-StyledIcon e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing e1duuirp3"
              cx="12"
              cy="12"
              r="6"
            />
          </g>
        </svg>
        Choice
      </label>
    </div>
    <div
      class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
    >
      Choice description
    </div>
  </div>
  .cache-18bdq20-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-18bdq20-StyledExpandable-StyledExpandable"
  >
    <div
      class="cache-1hzw3uf-StyledError e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when error 1`] = `
<DocumentFragment>
  .cache-1lgob3g-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  border: 1px solid #dd3252!important;
  box-shadow: 0px 0px 0px 3px #DD325240;
}

.cache-160wxok-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
  margin-bottom: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n0re8b-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n0re8b-StyledIcon .e1duuirp3 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-1lgob3g-BorderedBox-StyledBorderedBox e13z6rra3"
  >
    <div
      class="cache-160wxok-StyledRadioContainer e13z6rra2"
    >
      <label
        aria-disabled="false"
        class="e1duuirp0 e1g1zfwd0 cache-r43if8-StyledText-variantStyles-StyledRadioContainer"
        for="radio-choice"
      >
        <input
          aria-checked="false"
          aria-disabled="false"
          aria-invalid="true"
          class="cache-1ihnbva-StyledRadio e1duuirp1"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
        <svg
          class="cache-n0re8b-StyledIcon e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing e1duuirp3"
              cx="12"
              cy="12"
              r="6"
            />
          </g>
        </svg>
        Choice
      </label>
    </div>
    <div
      class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
    >
      Choice description
    </div>
  </div>
  .cache-o1jcxj-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 5000px;
  opacity: 1;
  overflow: visible;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-o1jcxj-StyledExpandable-StyledExpandable"
  >
    <div
      class="cache-1hzw3uf-StyledError e13z6rra1"
    >
      Invalid value
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly with label desc and badge 1`] = `
<DocumentFragment>
  .cache-mro85z-BorderedBox-StyledBorderedBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  cursor: not-allowed!important;
  color: #c4c9d6;
}

.cache-160wxok-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0 8px;
  margin-bottom: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='false'] {
  cursor: pointer;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1:focus+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer .e1duuirp1[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1+.e1duuirp2 .e1duuirp3 {
  fill: #eeeeff;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer:hover[aria-disabled='false'] .e1duuirp1[aria-invalid='true']+.e1duuirp2 .e1duuirp3 {
  fill: #ffe1e7;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-r43if8-StyledText-variantStyles-StyledRadioContainer[aria-disabled='true'] .e1duuirp2 .e1duuirp3 {
  fill: #f6f6f8;
}

.cache-1ihnbva-StyledRadio {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-n0re8b-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-n0re8b-StyledIcon .e1duuirp3 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

.cache-105bjjx-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 8px;
  gap: 4px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 16px;
  color: #ffffff;
  background: #ff8c69;
}

.cache-1syu3d2-StyledText-variantStyles-colorStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 10px;
}

.cache-1syu3d2-StyledText-variantStyles-colorStyles-StyledTypography.cache-1syu3d2-StyledText-variantStyles-colorStyles-StyledTypography {
  font-size: 10px;
  font-weight: 500;
}

<div
    class="cache-mro85z-BorderedBox-StyledBorderedBox e13z6rra3"
    disabled=""
  >
    <div
      class="cache-160wxok-StyledRadioContainer e13z6rra2"
    >
      <label
        aria-disabled="true"
        class="e1duuirp0 e1g1zfwd0 cache-r43if8-StyledText-variantStyles-StyledRadioContainer"
        for="radio-choice"
      >
        <input
          aria-checked="false"
          aria-disabled="true"
          aria-invalid="false"
          class="cache-1ihnbva-StyledRadio e1duuirp1"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
        <svg
          class="cache-n0re8b-StyledIcon e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing e1duuirp3"
              cx="12"
              cy="12"
              r="6"
            />
          </g>
        </svg>
        Choice
      </label>
      <span
        class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
      >
        (something)
      </span>
       
      <div
        aria-label="warning"
        as="span"
        class="cache-105bjjx-StyledBox egvl2gp0"
        role="status"
      >
        <div
          class="egvl2gp1 e1g1zfwd0 cache-1syu3d2-StyledText-variantStyles-colorStyles-StyledTypography"
        >
          Badge
        </div>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
    >
      Choice description
    </div>
  </div>
  .cache-18bdq20-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-1hzw3uf-StyledError {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-18bdq20-StyledExpandable-StyledExpandable"
  >
    <div
      class="cache-1hzw3uf-StyledError e13z6rra1"
    />
  </div>
</DocumentFragment>
`;
